build: Remove left-overs from remove-potcdate.sin.
* gettext-runtime/po/Makefile.in.in (.SUFFIXES): Remove '.sed'.
* gettext-tools/examples/po/Makefile.am (.SUFFIXES): Remove '.sed' and '.sin'.
(.sin.sed): Remove rule.
* gettext-tools/examples/hello-*/po/Makefile.am: Likewise.

--- a/gettext-runtime/po/Makefile.in.in
+++ b/gettext-runtime/po/Makefile.in.in
@@ -94,7 +94,7 @@ all: all-@USE_NLS@
 
 
 .SUFFIXES:
-.SUFFIXES: .po .gmo .sed .nop .po-create .po-update
+.SUFFIXES: .po .gmo .nop .po-create .po-update
 
 # The .pot file, stamp-po, .po files, and .gmo files appear in release tarballs.
 # The GNU Coding Standards say in
