--- a/gettext-tools/examples/hello-tcl-tk/po/Makefile.am
+++ b/gettext-tools/examples/hello-tcl-tk/po/Makefile.am
@@ -80,7 +80,7 @@ MSGFILES = @MSGFILES@
 # $(foreach lang, user-specified subset of $(LINGUAS), $(frob $(lang)).msg)
 CATALOGS = @TCLCATALOGS@
 
-SUFFIXES = .sed .sin .nop .po-create .po-update
+SUFFIXES = .nop .po-create .po-update
 
 # The .pot file, stamp-po, .po files, and .msg files appear in release tarballs.
 # The GNU Coding Standards say in
@@ -91,10 +91,6 @@ SUFFIXES = .sed .sin .nop .po-create .po-update
 #    So Makefile rules to update them should put the updated files in the
 #    source directory."
 # Therefore we put these files in the source directory, not the build directory.
-
-.sin.sed:
-	sed -e '/^#/d' $< > t-$@
-	mv t-$@ $@
 
 
 all-local: all-local-@USE_NLS@
