--- a/gettext-tools/examples/hello-perl/po/Makefile.am
+++ b/gettext-tools/examples/hello-perl/po/Makefile.am
@@ -79,7 +79,7 @@ MSGCONV = msgconv
 MSGFILTER = msgfilter
 
 # This is computed as $(foreach file, $(POTFILES), $(top_srcdir)/$(file))
-POTFILES_DEPS = @POTFILES_DEPS@
+POTFILES_DEPS != for file in $(POTFILES); do echo $(top_srcdir)/$$file; done
 
 # This is computed as $(foreach lang, $(LINGUAS), $(srcdir)/$(lang).po)
 POFILES = @POFILES@
