--- a/gettext-tools/po/POTFILES.in
+++ b/gettext-tools/po/POTFILES.in
@@ -3,33 +3,7 @@
 # This file is free software, distributed under GNU GPL v3+.
 
 # For updating this file, look at the result of:
-#   $ LC_ALL=C grep -l '[^A-Za-z_]_(' {gnulib-lib,src,libgettextpo}/*.[chly]
-
-# Files from the portability library
-gnulib-lib/argmatch.c
-gnulib-lib/clean-temp.c
-gnulib-lib/clean-temp-simple.c
-gnulib-lib/closeout.c
-gnulib-lib/copy-file.c
-gnulib-lib/csharpcomp.c
-gnulib-lib/csharpexec.c
-gnulib-lib/error.c
-gnulib-lib/execute.c
-gnulib-lib/gai_strerror.c
-gnulib-lib/getaddrinfo.c
-gnulib-lib/getopt.c
-gnulib-lib/javacomp.c
-gnulib-lib/javaexec.c
-gnulib-lib/javaversion.c
-gnulib-lib/obstack.c
-gnulib-lib/openat-die.c
-gnulib-lib/os2-spawn.c
-gnulib-lib/pipe-filter-ii.c
-gnulib-lib/quotearg.c
-gnulib-lib/spawn-pipe.c
-gnulib-lib/wait-process.c
-gnulib-lib/xalloc-die.c
-gnulib-lib/xsetenv.c
+#   $ LC_ALL=C grep -l '[^A-Za-z_]_(' {src,libgettextpo}/*.[chly]
 
 # Package source files
 src/cldr-plurals.c
@@ -143,8 +117,5 @@ src/x-tcl.c
 src/x-vala.c
 src/x-ycp.c
 src/user-email.sh.in
-libgettextpo/error.c
 libgettextpo/gettext-po.c
 libgettextpo/markup.c
-libgettextpo/obstack.c
-libgettextpo/xalloc-die.c
