New example 'hello-ruby'.
* gettext-tools/examples/hello-ruby: New directory, based on
gettext-tools/examples/hello-php.
* gettext-tools/examples/Makefile.am (EXAMPLESFILES, EXAMPLESDIRS): Update.
* gettext-tools/examples/po/Makefile.am (POTFILES, SMALLPOTS,
SMALLPOFILES_FOR_lang): Update.
* gettext-tools/examples/README: Update.
* gettext-tools/examples/check-examples: Handle this directory as well.
* NEWS: Mention the new example.

--- a/gettext-tools/examples/Makefile.am
+++ b/gettext-tools/examples/Makefile.am
@@ -1,5 +1,5 @@
 ## Makefile for the gettext-tools/examples subdirectory of GNU gettext
-## Copyright (C) 2001-2007, 2009-2016, 2018-2023 Free Software Foundation, Inc.
+## Copyright (C) 2001-2024 Free Software Foundation, Inc.
 ##
 ## This program is free software: you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -314,6 +314,15 @@ EXAMPLESFILES = \
   hello-csharp-forms/m4/Makefile.am \
   hello-csharp-forms/po/Makefile.am \
   \
+  hello-ruby/INSTALL \
+  hello-ruby/autogen.sh \
+  hello-ruby/autoclean.sh \
+  hello-ruby/hello.rb \
+  hello-ruby/Makefile.am \
+  hello-ruby/configure.ac \
+  hello-ruby/m4/Makefile.am \
+  hello-ruby/po/Makefile.am \
+  \
   hello-gawk/INSTALL \
   hello-gawk/autogen.sh \
   hello-gawk/autoclean.sh \
@@ -407,6 +416,7 @@ EXAMPLESDIRS = \
   hello-java-qtjambi \
   hello-csharp \
   hello-csharp-forms \
+  hello-ruby \
   hello-gawk \
   hello-pascal \
   hello-ycp \
