--- a/gettext-tools/examples/hello-c++-gnome2/configure.ac
+++ b/gettext-tools/examples/hello-c++-gnome2/configure.ac
@@ -3,12 +3,18 @@ dnl This file is in the public domain.
 dnl
 dnl Configuration file - processed by autoconf.
 
-AC_INIT([hello-c-gnome], [0])
-AC_CONFIG_SRCDIR([hello.c])
+AC_INIT([hello-c++-gnome2], [0], , [hello-c++-gnome2])
+AC_CONFIG_SRCDIR([hello.cc])
 AM_INIT_AUTOMAKE([1.11])
 
-AC_PROG_CC
+AC_PROG_CXX
+
 GNOME_INIT
+GTKMM_CFLAGS=`gtkmm-config --cflags`
+AC_SUBST([GTKMM_CFLAGS])
+GTKMM_LIBS=`gtkmm-config --libs`
+AC_SUBST([GTKMM_LIBS])
+
 AM_GNU_GETTEXT([external])
 AM_GNU_GETTEXT_VERSION([0.23])
 
