--- a/gettext-tools/examples/hello-c-gnome2/configure.ac
+++ b/gettext-tools/examples/hello-c-gnome2/configure.ac
@@ -3,22 +3,12 @@ dnl This file is in the public domain.
 dnl
 dnl Configuration file - processed by autoconf.
 
-AC_INIT([hello-objc-gnome], [0])
-AC_CONFIG_SRCDIR([hello.m])
+AC_INIT([hello-c-gnome2], [0])
+AC_CONFIG_SRCDIR([hello.c])
 AM_INIT_AUTOMAKE([1.11])
 
 AC_PROG_CC
-AC_SUBST([OBJC],["$CC"])
-AC_SUBST([OBJCFLAGS],["$CFLAGS"])
-
 GNOME_INIT
-OBGNOME_INCLUDES=
-obgnome_prefix=`obgnome-config --prefix`
-if test -n "$obgnome_prefix"; then
-  OBGNOME_INCLUDES="-I $obgnome_prefix/include"
-fi
-AC_SUBST([OBGNOME_INCLUDES])
-
 AM_GNU_GETTEXT([external])
 AM_GNU_GETTEXT_VERSION([0.23])
 
