hello-c-gnome3: Fix an error "Settings schema 'org.gnu.gettext.examples.hello' is not installed".
* gettext-tools/examples/hello-c-gnome3/configure.ac: Invoke
gl_BUILD_TO_HOST_LOCALEDIR, gl_BUILD_TO_HOST_PKGDATADIR.
* gettext-tools/examples/hello-c-gnome3/Makefile.am (DEFS): Define also
PKGDATADIR.
(pkgdata_DATA): New variable.
* gettext-tools/examples/hello-c-gnome3/hello.c (main): Add PKGDATADIR to the
GSETTINGS_SCHEMA_DIR value.

--- a/gettext-tools/examples/hello-c-gnome3/Makefile.am
+++ b/gettext-tools/examples/hello-c-gnome3/Makefile.am
@@ -16,8 +16,12 @@ bin_PROGRAMS = hello
 # The source files of the 'hello' program.
 hello_SOURCES = hello.c resources.c
 
-# Define a C macro LOCALEDIR indicating where catalogs will be installed.
-DEFS = -DLOCALEDIR=\"$(localedir)\" @DEFS@
+# Define a C macro LOCALEDIR indicating where catalogs will be installed
+# and a C macro PKGDATADIR indicating a package-specific location.
+DEFS = \
+  -DLOCALEDIR=$(localedir_c_make) \
+  -DPKGDATADIR=$(pkgdatadir_c_make) \
+  @DEFS@
 
 # Make sure the gnome.h include file is found.
 AM_CPPFLAGS = $(GTK_CFLAGS)
@@ -35,6 +39,10 @@ gschemas.compiled: hello.gschema.xml
 resources.c: hello.gresource.xml hello.ui
 	$(AM_V_GEN) $(GLIB_COMPILE_RESOURCES) $< --target=$@ \
 		--sourcedir=$(srcdir) --generate-source
+
+# Install the compiled GSettings schema in a package-specific location
+# (so that "make install" works with a --prefix other than /usr).
+pkgdata_DATA = gschemas.compiled
 
 desktopdir = $(datadir)/applications
 desktop_DATA = hello.desktop
