Ruby: Add unit test for Ruby support.
* gettext-tools/tests/lang-ruby: New file.
* gettext-tools/tests/Makefile.am (TESTS): Add it.

--- a/gettext-tools/tests/Makefile.am
+++ b/gettext-tools/tests/Makefile.am
@@ -218,6 +218,7 @@ TESTS = gettext-1 gettext-2 \
 	lang-csharp \
 	lang-javascript \
 	lang-guile lang-clisp lang-elisp lang-librep \
+	lang-ruby \
 	lang-sh lang-bash \
 	lang-gawk \
 	lang-lua \
